Adding Panic Handler
